@@ -19,9 +19,9 @@ the various exit status values.
 The reference documents are:
   sas-r05.pdf          www.t10.org   draft prior to original SAS spec
   sas1r10.pdf          www.t10.org   draft prior to SAS 1.1 spec
-  sas2r12.pdf          www.t10.org   SAS 2 draft
+  sas2r13.pdf          www.t10.org   SAS 2 draft
   SFF_8485.PDF         www.sffcommittee.com   SGPIO revision 0.7
 
 
 Doug Gilbert
-29th October 2007
+9th December 2007
